[gd_scene load_steps=3 format=3 uid="uid://dwfq6esp2sof6"]

[ext_resource type="Script" path="res://Scripts/UI/pause_menu.gd" id="1_d4wkg"]
[ext_resource type="Theme" uid="uid://cssjhrmxb4sw7" path="res://Assets/Materials/control_theme.tres" id="1_g3hhs"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_g3hhs")
script = ExtResource("1_d4wkg")

[node name="BG" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.109804, 0.109804, 0)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PAUSED" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "PAUSED"

[node name="MusicLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Music"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SFXLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "SFX"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="LookSensitivityLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Look Sensitivity"
horizontal_alignment = 1

[node name="SensitivitySlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.05
max_value = 0.85
step = 0.1
value = 0.35
ticks_on_borders = true

[node name="InvertLookRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="InvertLookLabel" type="Label" parent="CenterContainer/VBoxContainer/InvertLookRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Invert Look"
horizontal_alignment = 1

[node name="InvertLookToggle" type="CheckButton" parent="CenterContainer/VBoxContainer/InvertLookRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="DisableVisualizerRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="DisableVisualizer" type="Label" parent="CenterContainer/VBoxContainer/DisableVisualizerRow"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 22
text = "Disable Visualizer"
horizontal_alignment = 1

[node name="VisualizerToggle" type="CheckButton" parent="CenterContainer/VBoxContainer/DisableVisualizerRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
